# gpu_monitor

./: config.yaml  requirements-dev.txt  requirements.txt
examples/: config.yaml.example
output/dashboards/: vllm-monitor.json
output/grafana/dashboards/: gpu-cluster.json  vllm-monitor.json
output/grafana/provisioning/dashboards/: default.yml
output/grafana/provisioning/datasources/: prometheus.yml
output/output/prometheus/rules/: gpu_alerts.yml
output/prometheus/: prometheus.yml
scripts/: dcgm-exporter.service  gpu-monitor.service  grafana-server.service  install.sh  prometheus.service
src/: pyproject.toml
src/gpu_monitor/: __init__.py  alerts.py  cli.py  collector.py  config.py  parser.py  recorder.py  reporter.py  storage.py
src/gpu_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gpu_monitor/generators/: __init__.py  alerts.py  grafana.py  prometheus.py  vllm_grafana.py  vllm_prometheus.py
src/gpu_monitor/web/: server.py
src/gpu_monitor/web/static/: dashboard.js  style.css
src/gpu_monitor/web/templates/: dashboard.html
tests/: conftest.py  test_collector.py  test_generators.py  test_parser.py  test_recorder.py  test_reporter.py  test_storage.py  test_vllm_generators.py
