[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-monitor"
version = "0.2.0"
description = "DCGM exporter 기반 Prometheus + Grafana 설정 생성기"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gpu-monitor = "gpu_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
